# job-candidate-fit

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
src/: config.py  models.py  orchestrator.py  pii_redactor.py
src/agents/: job_agent.py  matcher_agent.py  resume_agent.py  summary_agent.py
src/prompts/v1/: fit_analyser_prompt.txt  job_parser_prompt.txt  resume_parser_prompt.txt  summariser_prompt.txt
src/tools/: education_evaluator.py  experience_evaluator.py  nli_entailment.py  overall_scoring.py  parse_dates_and_duration.py  skill_evaluator.py
src/utils/: data_loader.py  embedding_model.py
